--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,6 +1,12 @@
 name: Generate Pacman Graph
 
+permissions:
+  contents: write
+
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
@@ -10,12 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+
       - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: thesakshikendre
           outputs: |
             dist/pacman-contribution-graph.svg
             dist/pacman-contribution-graph-dark.svg?palette=github-dark
+
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
