--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -4,29 +4,32 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
   schedule:
     - cron: "0 */12 * * *"
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
 
-      - uses: Platane/snk/svg-only@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Generate SVG
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: thesakshikendre
           outputs: |
-            dist/pacman-contribution-graph.svg
-            dist/pacman-contribution-graph-dark.svg?palette=github-dark
+            pacman-contribution-graph.svg
+            pacman-contribution-graph-dark.svg?palette=github-dark
 
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+      - name: Commit & Push
+        run: |
+          mkdir -p dist
+          mv *.svg dist/
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add dist
+          git commit -m "Generate Pacman graph"
+          git push
